--- a/data_profiling.ipynb
+++ b/data_profiling.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -40,15 +40,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<>:1: SyntaxWarning: invalid escape sequence '\\D'\n",
+      "<>:5: SyntaxWarning: invalid escape sequence '\\D'\n",
+      "<>:1: SyntaxWarning: invalid escape sequence '\\D'\n",
+      "<>:5: SyntaxWarning: invalid escape sequence '\\D'\n",
+      "C:\\Users\\Omar\\AppData\\Local\\Temp\\ipykernel_36060\\494733949.py:1: SyntaxWarning: invalid escape sequence '\\D'\n",
+      "  path=\"D:\\DownLoad\\projects\\Data Governance\\data\\ssh_logs_processed.csv\"   #Input the path\n",
+      "C:\\Users\\Omar\\AppData\\Local\\Temp\\ipykernel_36060\\494733949.py:5: SyntaxWarning: invalid escape sequence '\\D'\n",
+      "  report.to_file(\"D:\\DownLoad\\projects\\Data Governance\\pofiling_data\\ssh_logs_process.html\")\n",
+      "100%|██████████| 8/8 [00:08<00:00,  1.10s/it]09<00:11,  2.23s/it, Describe variable: City]\n",
+      "Summarize dataset: 100%|██████████| 19/19 [00:10<00:00,  1.78it/s, Completed]                 \n",
+      "Generate report structure: 100%|██████████| 1/1 [00:04<00:00,  4.34s/it]\n",
+      "Render HTML: 100%|██████████| 1/1 [00:00<00:00,  3.83it/s]\n",
+      "Export report to file: 100%|██████████| 1/1 [00:00<00:00, 166.03it/s]\n"
+     ]
+    }
+   ],
    "source": [
-    "path=\"\"   #Input the path \n",
+    "path=\"D:\\DownLoad\\projects\\Data Governance\\data\\ssh_logs_processed.csv\"   #Input the path \n",
     "data=pd.read_csv(path)\n",
     "df=pd.DataFrame(data)\n",
     "report=ProfileReport(df,title=\"profile_Report\")\n",
-    "report.to_html()\n"
+    "report.to_file(\"D:\\DownLoad\\projects\\Data Governance\\pofiling_data\\ssh_logs_process.html\")\n",
+    "\n"
    ]
   }
  ],
