Improved some files and finished Phase (3) bonus

--- a/Quality_Control.ipynb
+++ b/Quality_Control.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "id": "1747bc00",
    "metadata": {},
    "outputs": [],
@@ -12,13 +12,13 @@
     "from pandera import Column, DataFrameSchema, Check, Index\n",
     "from pandera.errors import SchemaErrors\n",
     "\n",
-    "file_path = r\"D:\\DownLoad\\projects\\Data Governance\\data\\ssh_logs_processed.csv\"\n",
+    "file_path = r\"C:\\ZC\\Data Governance\\DataGovernanceWorkflow\\data\\ssh_logs_processed.csv\"\n",
     "df = pd.read_csv(file_path)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "id": "794170c9",
    "metadata": {},
    "outputs": [
@@ -50,12 +50,190 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "id": "80aaf0d3",
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "Date",
+         "rawType": "object",
+         "type": "unknown"
+        },
+        {
+         "name": "Time",
+         "rawType": "object",
+         "type": "unknown"
+        },
+        {
+         "name": "IP",
+         "rawType": "object",
+         "type": "unknown"
+        },
+        {
+         "name": "Port",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "Username",
+         "rawType": "object",
+         "type": "unknown"
+        },
+        {
+         "name": "Password",
+         "rawType": "object",
+         "type": "unknown"
+        },
+        {
+         "name": "Country",
+         "rawType": "object",
+         "type": "unknown"
+        },
+        {
+         "name": "City",
+         "rawType": "object",
+         "type": "unknown"
+        }
+       ],
+       "conversionMethod": "pd.DataFrame",
+       "ref": "6b9e351a-4506-4aca-9e7b-05584a47078a",
+       "rows": [
+        [
+         "count",
+         "84379",
+         "84379",
+         "84379",
+         "84379.0",
+         "84374",
+         "84232",
+         "84379",
+         "84379"
+        ],
+        [
+         "unique",
+         "9",
+         "50909",
+         "1423",
+         null,
+         "1138",
+         "21944",
+         "100",
+         "609"
+        ],
+        [
+         "top",
+         "8/3/2024",
+         "17:17:37",
+         "192.3.251.75",
+         null,
+         "root",
+         "123456",
+         "Australia",
+         "Sydney"
+        ],
+        [
+         "freq",
+         "19184",
+         "44",
+         "14575",
+         null,
+         "48886",
+         "7055",
+         "21322",
+         "18816"
+        ],
+        [
+         "mean",
+         null,
+         null,
+         null,
+         "46616.96360468837",
+         null,
+         null,
+         null,
+         null
+        ],
+        [
+         "std",
+         null,
+         null,
+         null,
+         "9241.37526818212",
+         null,
+         null,
+         null,
+         null
+        ],
+        [
+         "min",
+         null,
+         null,
+         null,
+         "1056.0",
+         null,
+         null,
+         null,
+         null
+        ],
+        [
+         "25%",
+         null,
+         null,
+         null,
+         "39825.0",
+         null,
+         null,
+         null,
+         null
+        ],
+        [
+         "50%",
+         null,
+         null,
+         null,
+         "47096.0",
+         null,
+         null,
+         null,
+         null
+        ],
+        [
+         "75%",
+         null,
+         null,
+         null,
+         "54160.0",
+         null,
+         null,
+         null,
+         null
+        ],
+        [
+         "max",
+         null,
+         null,
+         null,
+         "65534.0",
+         null,
+         null,
+         null,
+         null
+        ]
+       ],
+       "shape": {
+        "columns": 8,
+        "rows": 11
+       }
+      },
       "text/html": [
        "<div>\n",
        "<style scoped>\n",
@@ -239,7 +417,7 @@
        "max           NaN     NaN  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -258,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "id": "bfd727d8",
    "metadata": {},
    "outputs": [],
@@ -276,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 7,
    "id": "1f5bd7f5",
    "metadata": {},
    "outputs": [],
@@ -303,8 +481,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "id": "831862c7",
+   "execution_count": 8,
+   "id": "b8c010c4",
    "metadata": {},
    "outputs": [
     {
@@ -321,13 +499,13 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.isna().sum()"
+    "df.isnull().sum()"
    ]
   },
   {
@@ -340,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 54,
    "id": "aaa2ea4e",
    "metadata": {},
    "outputs": [],
@@ -357,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 55,
    "id": "d103d1aa",
    "metadata": {},
    "outputs": [
@@ -389,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "c8c8caa3",
    "metadata": {},
    "outputs": [
@@ -484,32 +662,11 @@
     "    print(\"❌ Validation failed. Issues found:\")\n",
     "    print(err.failure_cases)\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "id": "0a149ce2",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "<>:1: SyntaxWarning: invalid escape sequence '\\D'\n",
-      "<>:1: SyntaxWarning: invalid escape sequence '\\D'\n",
-      "C:\\Users\\Omar\\AppData\\Local\\Temp\\ipykernel_22728\\210265714.py:1: SyntaxWarning: invalid escape sequence '\\D'\n",
-      "  df.to_csv(\"D:\\DownLoad\\projects\\Data Governance\\data\\Cleaned_csv.csv\")\n"
-     ]
-    }
-   ],
-   "source": [
-    "df.to_csv(\"D:\\DownLoad\\projects\\Data Governance\\data\\Cleaned_csv.csv\")"
-   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -523,7 +680,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
